# JKHouseholdAccounts

./: CMakeLists.txt  README.md  appveyor.yml
cmake/: jkha_deployqt.cmake
doc/: jkhadatabase_er.drawio
installer_win/: CMakeLists.txt  installer.cmake.nsi  resources.rc
source/: CMakeLists.txt  defines.h.cmake  dlgaccountaddexpense.cpp  dlgaccountaddexpense.h  dlgaccountaddexpense.ui  jkcpptools.cpp  jkcpptools.h  jkhabudgettypedelegate.cpp  jkhabudgettypedelegate.h  jkhacategoriescombobox.cpp  jkhacategoriescombobox.h  jkhacategoriesdelegate.cpp  jkhacategoriesdelegate.h  jkhacategoriestreemodel.cpp  jkhacategoriestreemodel.h  jkhadatabasetools.cpp  jkhadatabasetools.h  jkhamoneydelegate.cpp  jkhamoneydelegate.h  jkhasettings.cpp  jkhasettings.h  jktreecombobox.cpp  jktreecombobox.h  main.cpp  main_window.cpp  main_window.h  main_window.ui
source/resources/: appversion.rc.cmake  resources.qrc
source/sql_ressources/: create_tables.sql  sql_ressources.qrc
source/translations/: jkhouseholdaccounts_de.ts  jkhouseholdaccounts_en.ts
translations/: jkhouseholdaccounts_de.ts  jkhouseholdaccounts_en.ts
